--- a/front-end/inspector.html
+++ b/front-end/inspector.html
@@ -30,7 +30,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <head>
     <title>nodeJS Inspector</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="audits.css">
+    <link rel="stylesheet" type="text/css" href="frontend/audits.css">
     <link rel="stylesheet" type="text/css" href="inspector.css">
     <link rel="stylesheet" type="text/css" href="inspectorSyntaxHighlight.css">
     <link rel="stylesheet" type="text/css" href="popover.css">
@@ -38,8 +38,8 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="utilities.js"></script>
     <script type="text/javascript" src="treeoutline.js"></script>
     <script type="text/javascript" src="inspector.js"></script>
-    <script type="text/javascript" src="InspectorBackendStub.js"></script>
-    <script type="text/javascript" src="InspectorFrontendHostStub.js"></script>		
+    <script type="text/javascript" src="node/InspectorBackendStub.js"></script>
+    <script type="text/javascript" src="node/InspectorFrontendHostStub.js"></script>		
     <script type="text/javascript" src="Object.js"></script>
     <script type="text/javascript" src="Settings.js"></script>
     <script type="text/javascript" src="CSSStyleModel.js"></script>
@@ -132,7 +132,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="HelpScreen.js"></script>
     <script type="text/javascript" src="ShortcutsHelp.js"></script>
     <script type="text/javascript" src="HAREntry.js"></script>
-		<script type="text/javascript" src="InspectorController.js"></script>
+		<script type="text/javascript" src="node/InspectorController.js"></script>
 </head>
 <body class="detached">
     <div id="toolbar">
