self host the inspector instead of using the chrome extension

--- a/front-end/node/background.html
+++ b/front-end/node/background.html
@@ -1,5 +1,5 @@
 <script>
 chrome.browserAction.onClicked.addListener(function(tab) {
-  chrome.tabs.create({url:"inspector.html"});
+  chrome.tabs.create({url:"index.html"});
 });
 </script>
