removed radio buttons from scripts panel enabler

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -133,6 +133,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="ShortcutsHelp.js"></script>
     <script type="text/javascript" src="HAREntry.js"></script>
 		<script type="text/javascript" src="node/InspectorController.js"></script>
+		<script type="text/javascript" src="node/Overrides.js"></script>
 </head>
 <body class="detached">
     <div id="toolbar">
