factored front-end requests into Debugger.js and response handling into InspectorFrontendHostStub.js

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -38,8 +38,9 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="utilities.js"></script>
     <script type="text/javascript" src="treeoutline.js"></script>
     <script type="text/javascript" src="inspector.js"></script>
+    <script type="text/javascript" src="node/Debugger.js"></script>
     <script type="text/javascript" src="node/InspectorBackendStub.js"></script>
-    <script type="text/javascript" src="node/InspectorFrontendHostStub.js"></script>		
+    <script type="text/javascript" src="node/InspectorFrontendHostStub.js"></script>
     <script type="text/javascript" src="Object.js"></script>
     <script type="text/javascript" src="Settings.js"></script>
     <script type="text/javascript" src="CSSStyleModel.js"></script>
@@ -132,8 +133,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="HelpScreen.js"></script>
     <script type="text/javascript" src="ShortcutsHelp.js"></script>
     <script type="text/javascript" src="HAREntry.js"></script>
-		<script type="text/javascript" src="node/InspectorController.js"></script>
-		<script type="text/javascript" src="node/Overrides.js"></script>
+    <script type="text/javascript" src="node/Overrides.js"></script>
 </head>
 <body class="detached">
     <div id="toolbar">
