--- a/front-end/index.html
+++ b/front-end/index.html
@@ -135,7 +135,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="HAREntry.js"></script>
     <script type="text/javascript" src="node/Overrides.js"></script>
 </head>
-<body class="detached">
+<body class="attached">
     <div id="toolbar">
         <div class="toolbar-item close-left"><button id="close-button-left"></button></div>
         <div class="toolbar-item flexable-space"></div>
