began implementing heap snapshots

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -134,6 +134,18 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="ShortcutsHelp.js"></script>
     <script type="text/javascript" src="HAREntry.js"></script>
     <script type="text/javascript" src="node/Overrides.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="devTools.css">
+    <script type="text/javascript" src="v8/codemap.js"></script>
+    <script type="text/javascript" src="v8/consarray.js"></script>
+    <script type="text/javascript" src="v8/csvparser.js"></script>
+    <script type="text/javascript" src="v8/logreader.js"></script>
+    <script type="text/javascript" src="v8/profile.js"></script>
+    <script type="text/javascript" src="v8/profile_view.js"></script>
+    <script type="text/javascript" src="v8/splaytree.js"></script>
+    <script type="text/javascript" src="v8/ProfilerAgent.js"></script>
+    <script type="text/javascript" src="v8/ProfilerProcessor.js"></script>
+    <script type="text/javascript" src="v8/HeapProfilerPanel.js"></script>
 </head>
 <body class="attached">
     <div id="toolbar">
