--- a/front-end/index.html
+++ b/front-end/index.html
@@ -30,6 +30,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <head>
     <title>node inspector</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="audits.css">
     <link rel="stylesheet" type="text/css" href="goToLineDialog.css">
     <link rel="stylesheet" type="text/css" href="heapProfiler.css">
