Patched front-end/inspector.html
Added node-inspector specific scripts.

--- a/front-end/inspector.html
+++ b/front-end/inspector.html
@@ -186,8 +186,10 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="DockController.js"></script>
     <script type="text/javascript" src="DevToolsExtensionAPI.js"></script>
     <script type="text/javascript" src="Tests.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="node/Overrides.js"></script>
 </head>
-<body class="undocked" id="-webkit-web-inspector">
+<body class="detached" id="-webkit-web-inspector">
     <div id="toolbar">
         <div class="toolbar-item close-left"><div class="close-button" id="close-button-left"></div></div>
         <div id="toolbar-controls">
