Make socket.io work with subfolder hosting.
This is the only thing preventing hosting with a reverse
proxy, like Nginx, on a subfolder. Socket.io insists on
extracting the domain and connecting to it directly.
For example, if hosted at
 http://example.com/subfolder/debug?port=5858
socket.io connects to
 http://example.com/socket.io/..
This commit fixes that, as recommended by socket.io.

Aside: their wiki is outdated/incorrect. The logic is gleaned directly
from the source code of socket.io used with node-inspector.

--- a/front-end/inspector.html
+++ b/front-end/inspector.html
@@ -187,7 +187,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <script type="text/javascript" src="ScreencastView.js"></script>
     <script type="text/javascript" src="DevToolsExtensionAPI.js"></script>
     <script type="text/javascript" src="Tests.js"></script>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="socket.io/socket.io.js"></script>
     <script type="text/javascript" src="node/Overrides.js"></script>
 </head>
 <body class="detached" id="-webkit-web-inspector">
